@@ -29,7 +29,7 @@
 /* A Coset is intended to be used as a "row" in a CosetTable.  It has
    an index, which represents its position in the table, and it has a
    name.  The name equals the index as long as the coset is alive;
-   otherwise its the index of an earlier equivalent coset. */
+   otherwise the name is the index of an earlier equivalent coset. */
 
 class Coset
 {
@@ -42,7 +42,8 @@ public:
   void setname (int k) { name = k; };
   int getindex () const { return index; };
   void setindex (int k) { index = k; };
-  bool isalive () const { return name == index; };
+  /* Test a coset to see if it's alive */
+  operator bool () const { return name == index; };
   bool isdefined (int x) const { return row[x] >= 0; };
 private:
   std::vector<int> row;		/* row[x] is name of this coset acted on by x */
